# lllisp

./: Cargo.toml  README.md  TODO.md
docs/: c_interop.md  control_flow.md  data_structures.md  functional_features.md  functions.md  index.md  macros.md  modules.md  syntax_overview.md  types.md
examples/: alias.lllisp  arithmetic.lllisp  atoms_and_arrays.lllisp  basic_function.lllisp  basic_macro_test.lllisp  basic_macros.lllisp  closures.lllisp  comprehensive_macros.lllisp  control_flow.lllisp  expansion_test.lllisp  export_example.lllisp  for_loops.lllisp  generics.lllisp  hello.lllisp  higher_order.lllisp  if_conditions.lllisp  if_else.lllisp  macro_examples.lllisp  macros.lllisp  module_example.lllisp  module_import.lllisp  new_syntax.lllisp  option_type.lllisp  result_type.lllisp  simple_macro.lllisp  simple_macros.lllisp  simple_test.lllisp  structs.lllisp  tuple_inference.lllisp  tuple_inference_simple.lllisp  tuples_and_data.lllisp  type_inference.lllisp  types.lllisp
src/: alias_folding.rs  ast.rs  builtins.rs  dead_code_elimination.rs  external_functions.rs  interpreter.rs  lib.rs  macro_expander.rs  main.rs  parser.rs  pass1.rs  type_inference.rs
tests/: alias_test.rs  ast_module_test.rs  basic_union.lllisp  benchmarking_tests.rs  composition_tests.rs  comprehensive_macros_direct_test.rs  comprehensive_macros_test.rs  comprehensive_test.rs  dead_code_elimination_test.rs  debug_module_call_explicit.rs  direct_ast_macro_test.rs  error_handling_tests.rs  external_function_test.rs  for_loop_tests.rs  function_param_tests.rs  function_param_tests_new.rs  (+43 more)
(+7 files in other folders)
